Syllabify HMT Iliads

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,9 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CitableCorpus = "cf5ac11a-93ef-4a1a-97a3-f6af101603b5"
+CitableText = "41e66566-473b-49d4-85b7-da83b66615d8"
+HmtArchive = "1e7b0059-6550-4515-8382-5d3f2046a0a7"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+Orthography = "0b4c9448-09b0-4e78-95ea-3eb3328be36d"
+PolytonicGreek = "72b824a7-2b4a-40fa-944c-ac4f345dc63a"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
